the currently-checked out asset is used. This is so that one can see what
changes have been made since the checkout. Reported by Michael Herring.
[David]

=back

=head2 Bug Fixes

=over

=item *

Fixed bug in bric_ftpd where the ftp PWD command returns an incorrect path
(missing the site name).  Some ftp clients (eg. FileZilla) call PWD and use
this path after changing directories. [Adrian Yee]

=back

=head1 VERSION 1.10.10 (2010-04-11)

=head2 Improvements

=over

=item *

When displaying categories associated with a story when the
C<ENABLE_CATEGORY_BROWSER> F<bricolage.conf> directive is true, the categories
are now displayed in alphabetical order by URI. [David]

=item *

The installer no longer requires that L<Term::ReadPassword> be installed from
the CPAN before it continues. It will use it if it finds it, but if not
substitutes a simple implementation that does the trick (Bug #136). [David]

=item *

The Source select list when creating or editing a story or media documents now
lists sources in alphabetical order. Reported by Michael Herring (Bug # 138).
[David]

=back

=head2 Bug Fixes

=over

=item *

L<Bric::Util::Burner>'s C<publish()> method no longer removes documents from
workflow after publishing them, as such is the responsbility of the code that
calls publish. The publish callback already did, and now so does the
L<Bric::SOAP::Workflow> C<publish()> method. Thanks to David Beaudet for the
report and Aaron Fuleki for the steps to replicate (Bug #98). [David]

=item *

Fixed a bug where contributor and category search results would be propagated
to the contributor and category editing screens with a story or media
document. Searches from within documents should cache their own results,
separate from the admin search interfaces. [David]

=item *

Contributors associated with a story or media document and categories
associated with a story document are no longer paginated. When there were more